# GameOfLife-RS

./: Cargo.toml  spaceship.txt  valid_grid.txt
patterns/: valid_grid.txt
src/: clock.rs  file_parser.rs  game_of_life.rs  game_of_life_runner.rs  lib.rs  main.rs  not_sure.rs  old_main.rs  playground.rs
src/game_of_life_runner/: clock.rs  game_of_life.rs
