[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = {version = "0.6", features = ["canvas"] }
grid = "0.9.0"
eframe = "0.20.1"
egui = "0.20.1"
rand = "0.8.5"
libmath = "0.2.1"

[features]

